# QtModelView

./: CMakeLists.txt  LICENSE
src/: CMakeLists.txt  clickable.cpp  clickable.hh  main-window.cpp  main-window.hh  main.cpp  my-delegate.cpp  my-delegate.hh  my-model.cpp  my-model.hh  my-style.cpp  my-style.hh  my-view.cpp  my-view.hh  resource.qrc  test.txt
src/style/: style.qss  view-selector.qss
src/tools/: dispatch.cpp  dispatch.hh
src/widgets/: clickable.cpp  document-viewer.cpp  document-viewer.hh  single-file-view.cpp  single-file-view.hh  thumbnail-editor.cpp  thumbnail-editor.hh
